feature:module/category Implementa a listagem de categoria e a documentaçã de listagem de categorias
